# notion_alchemy

./: .gitignore  LICENSE  README.md  configuracoes_poetry_vscode.md  pyproject.toml
src/: main.py
src/notion_alchemy/: client.py  models.py  notion.py
tests/: client_teste.py  test_client.py
